--- a/style.css
+++ b/style.css
@@ -4,17 +4,39 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color: #FFF;
+  --bg-url: url(./assets/bg-dark-mobile.jpg);
+  --stroke-color: rgba(255, 255, 255, 0.5);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(255, 255, 255, 0.2);
+  --highlight-color: rgba(255, 255, 255, 0.1);
+  --switch-bg-url: url(./assets/MoonStars.svg);
+}
+
+.light-mode {
+  --text-color: #000;
+  --bg-url: url(./assets/bg-light-mobile.jpg);
+  --stroke-color: rgba(0, 0, 0, 0.5);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.2);
+  --highlight-color: rgba(0, 0, 0, 0.1);
+  --switch-bg-url: url(./assets/Sun.svg);
+}
+
 body {
-  background: url(./assets/bg-dark-mobile.jpg) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
   font-family: 'Inter', sans-serif;
-  color: #FFFFFF;
+  color: var(--text-color);
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0;
   padding: 0 24px;
 }
@@ -25,12 +47,54 @@ body * {
 }
 
 #profile img {
-  width: 112px;
+  width: 180px;
+  border: 1px solid var(--stroke-color);
+  border-radius: 50%;
 }
 
 #profile p {
+  font-size: 18px;
   font-weight: 500;
   margin-top: 8px;
+}
+
+#switch {
+  position: relative;
+  width: 64px;
+  margin: 4px auto;
+}
+
+#switch button {
+  width: 32px;
+  height: 32px;
+  background: #FFF var(--switch-bg-url) no-repeat center;
+  border: 1px solid var(--stroke-color);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 1;
+  transform: translateY(-50%);
+  animation: slide-dark-mode 0.2s;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+}
+
+.light-mode #switch button {
+  animation: slide-light-mode 0.2s forwards;
+}
+
+#switch span {
+  display: block;
+  width: 64px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
+  border-radius: 9999px;
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 }
 
 ul {
@@ -38,6 +102,7 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  padding: 24px 0;
 }
 
 ul li a {
@@ -46,18 +111,73 @@ ul li a {
   justify-content: center;
   padding: 16px 24px;
   text-decoration: none;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid var(--stroke-color);
   border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--highlight-color);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   font-weight: 500;
+  font-size: 18px;
   transition: background 0.2s;
 }
 
 ul li a:hover {
-  border: 1px solid #FFFFFF;
-  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid var(--text-color);
+  background-color: var(--surface-color-hover);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+}
+
+#social-links {
+  display: flex;
+  justify-content: center;
+  padding: 24px 0;
+  font-size: 24px;
+}
+
+#social-links a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  border-radius: 50%;
+  transition: background 0.2s;
+}
+
+#social-links a:hover {
+  background: var(--highlight-color);
+}
+
+footer {
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-dark-desktop.jpg);
+  }
+
+  .light-mode {
+    --bg-url: url(./assets/bg-light-desktop.jpg);
+  }
+}
+/* Animation switch button */
+@keyframes slide-light-mode {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-dark-mode {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
